--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
 server.port=8090
+
+spring.datasource.url=jdbc:sqlserver://;serverName=localhost;databaseName=master;
+spring.datasource.username=SA
+spring.datasource.password=Kkroal@5334
+
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+logging.level.org.hibernate.sql = debug
+spring.jpa.hibernate.ddl-auto = none
+
+#logging.level.root=ERROR
+#logging.level.com.example.demo = TRACE
+#logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
+#logging.file=src/main/resources/Testing/Myapp.log
+# Define the root logger with file appender
+#log4j.rootLogger = TRACE, sql
+#
+# Define the file appender
+#log4j.appender.sql=org.apache.log4j.jdbc.JDBCAppender
+#log4j.appender.sql.URL=jdbc:sqlserver://localhost/SqlTest
+## Set Database Driver
+##log4j.appender.sql.driver=com.mysql.jdbc.Driver
+## Set database user name and password
+#log4j.appender.sql.user=SA
+#log4j.appender.sql.password=Kkroal@5334
+## Set the SQL statement to be executed.
+##log4j.appender.sql.sql=INSERT INTO LOGS VALUES ('%x', now() ,'%C','%p','%m')
+## Define the xml layout for file appender
+#log4j.appender.sql.layout=org.apache.log4j.PatternLayout
