--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 logging.level.org.hibernate.sql = debug
 spring.jpa.hibernate.ddl-auto = none
 
+test.app.jwtSecret = jwtTestSecretKey
+test.app.jwtExpiration = 86400
+spring.jackson.serialization.fail-on-empty-beans=false
+
 #logging.level.root=ERROR
 #logging.level.com.example.demo = TRACE
 #logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
